fix: navbar size and image position on smaller screen

--- a/src/components/header/style.module.scss
+++ b/src/components/header/style.module.scss
@@ -4,7 +4,7 @@
     top: 25px;
 
     @media (max-width: 768px) {
-        right: 27px; // Adjusted position for smaller screens
+        right: 25px; // Adjusted position for smaller screens
         top: 12px;   // Reduced top spacing
     }
 
